oriterm_core/tests/vttest/snapshots/vttest__menu8__120x40_08_vt102_03.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
A**********************************************************************************************************************B
                                                                                                                        
                                                                                                                        
Test of 'Insert Mode'. The top line should be 'A*** ... ***B'. Push <RETURN>
