oriterm_core/tests/vttest/snapshots/vttest__menu8__120x40_08_vt102_07.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
If your terminal has the ANSI 'Insert Character' function                                                               
(the VT102 does not), then you should see a line like this                                                              
  A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                                                   
below:                                                                                                                  
                                                                                                                        
  A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>
