oriterm_core/tests/vttest/snapshots/vttest__menu8__120x40_08_vt102_11.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
AB                                                                                                                                  
                                                                                                                                    
                                                                                                                                    
Test of 'Delete Character'. The top line should be 'AB'. Push <RETURN>
